app/javascript/stylesheets/2-component_styles/contact.scss
// CONTACT CARD STYLES
.card {
  background-color: rgba(0, 0, 0, 0) !important;
}

#contact-deck-bg {
  background-color: rgba(0, 0, 0, 0.2) !important;
  border-radius: 25px;
}

#contact-card {
  color: $roma_white;
  font-weight: 400 !important;
}

#contact-info-dec {
  @include font_mix;
  color: white !important;
}

.contact-title {
  margin: 0 !important;
}

#contact-h4 {
  font-size: 18px;
  font-weight: 200 !important;
  padding: 0 !important;
  margin: 0 !important;
  margin-bottom: 6px !important;
}

#contact-hr {
  border-top: 1px solid rgba(255, 255, 255, 0.5);
}

#contact-h5 {
  font-size: 16px !important;
  font-weight: 200 !important;
  padding: 0 !important;
  margin: 0 !important;
}

// FORM CARD STYLES

#g-logo-quote-box {
  height: 150px;
  width: 150px;
  margin-top: 25px !important;
  margin-bottom: 25px !important;
}

#logo-comment-mg {
  margin-top: 25px !important;
}

#contact-h6 {
  @include font_mix;
  color: white !important;
  font-size: 18px !important;
  font-weight: 200 !important;
}

form {
  @include font_mix;
}

input {
  background-color: transparent !important;
  color: white !important;
}

textarea {
  background-color: transparent !important;
  color: white !important;
}

::-webkit-input-placeholder {
  color: white !important;
  opacity: 0.7 !important;
  font-weight: 200 !important;
}
:-moz-placeholder {
  color: white !important;
  opacity: 0.7 !important;
  font-weight: 200 !important;
}
::-moz-placeholder {
  color: white !important;
  opacity: 0.7 !important;
  font-weight: 200 !important;
}
:-ms-input-placeholder {
  color: white !important;
  opacity: 0.7 !important;
  font-weight: 200 !important;
}

#contact-btn {
  @include font_mix;
  font-weight: 200 !important;
  background-color: transparent;
  border: 1px solid white !important;
  padding: 8px 15px !important;
  border-radius: 100px !important;
}
#contact-btn:hover,
#contact-btn:active {
  background-color: white;
  color: black !important;
  border: 1px solid black;
}

